...
    android:layout_height="wrap_content"
    android:background="#eeeeef"
    android:elevation="4dp"
    app:titleTextColor="#262626">

	<ImageButton
		android:id="@+id/closeButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		android:background="#eeeeef"
		android:contentDescription="@string/close_button"
		android:minWidth="38dp"
...
